--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: etsy-luca:latest   # optional tag for the built image
-    volumes:
-      - etsy_luca_data:/data
-    ports:
-      - "8080:8000"
-    restart: unless-stopped
-    
+    image: etsy-luca:latest        # optional tag name for the built image
     environment:
       # App auth
       APP_SECRET: ${APP_SECRET}
